--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,10 +8,7 @@ jobs:
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - run: echo "Building up versioning functionality"
-      - run: cd ..
-      - run: npm install
-      - run: declare -x VERSION=$(jq -r '.version' package.json)
-      - run: echo $VERSION
+      - run: cd ..; npm install; declare -x VERSION=$(jq -r '.version' package.json); echo $VERSION;
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
