--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,16 +1,17 @@
-name: GitHub Actions Demo
+name: Pipeline version bump test
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Bump-Version-Number:
+  # ubuntu and node with npm installed
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - run: echo "Building up versioning functionality"
-      - run: cd ..; npm install; declare -x VERSION=$(jq -r '.version' package.json); echo $VERSION;
+      - run: echo "🎉 Just a welcome log message."
       - name: Check out repository code
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install; declare -x VERSION=$(jq -r '.version' package.json); echo $VERSION;
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
