--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,6 +13,9 @@ jobs:
           node-version: '14'
       - run: npm install; 
       - run: npm install -g gulp;
+      - run: touch npm-shrinkwrap.json
+      - run: cat dump.txt >> npm-shrinkwrap.json
+      - run: npm install
       - run: gulp autoversion;
       - run: git add package.json
       - run: git commit -m "[skip CI]"
