--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,6 +14,7 @@ jobs:
       - run: npm install; 
       - run: npm install -g gulp;
       - run: touch npm-shrinkwrap.json
+      - run: ls -la
       - run: cat dump.txt >> npm-shrinkwrap.json
       - run: npm install
       - run: gulp autoversion;
